Fixed width spilling

--- a/styles/body.css
+++ b/styles/body.css
@@ -1,5 +1,5 @@
 .SlideContainer {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,12 +11,11 @@
 .ImageContainer {
     max-height: 500px;
     min-height: 500px;
-    min-width: 100vw;
+    min-width: 100%;
     vertical-align: middle;
-    transform: translateZ(0);
     background-image: url("https://static.independent.co.uk/s3fs-public/thumbnails/image/2018/04/22/10/istock-683044558.jpg");
     background-size: cover;
-    filter: drop-shadow(gray 1px 1px 10px);
+    filter: drop-shadow(black 1px 1px 5px);
 }
 
 .InfoContainer {
@@ -63,7 +62,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding-top: 50px;
 }
